# mogakko_bot_back

./: Cargo.toml  Dockerfile  README.md
migrations/2022-04-28-164453_schedules/: down.sql  up.sql
migrations/2022-06-07-075642_users/: up.sql
migrations/2022-07-10-085714_schedules/: up.sql
src/: connection.rs  error.rs  main.rs  route.rs  schema.rs
src/connection_bot/: msg_struct.rs
src/discord_bot/: auth.rs  bot.rs  config.rs  mod.rs
src/schedule/: mod.rs  model.rs
src/session/: mod.rs  session.rs
src/user/: format.rs  mod.rs  model.rs  new.rs
