[package]
name = "mogakko_bot_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
rocket_codegen = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
dotenv = "0.15.0"
env_logger = "0.5.12"
log = "0.4.6"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.13.0"
